--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,7 @@
 version: 2
 updates:
   - directory: "/"
+    open-pull-requests-limit: 16
     package-ecosystem: "github-actions"
     schedule:
       interval: "daily"
