--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,26 +10,30 @@ jobs:
           fetch-depth: 1
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v2
+      - name: Determine the name of cache
+        run: |
+          name=$(echo ${{ matrix.base_image }} | cut -d':' -f2 | sed -e 's/stable-slim/bullseye/')
+          echo "cache_name=$name" >> $GITHUB_ENV
       - name: Cache Docker layers
         uses: actions/cache@v3
         with:
-          key: ${{ runner.os }}-${{ matrix.base_image }}-buildx-${{ github.sha }}
-          path: /tmp/.buildx-cache-${{ matrix.base_image }}
+          key: ${{ runner.os }}-buildx-${{ env.cache_name }}-${{ github.sha }}
+          path: /tmp/.buildx-cache-${{ env.cache_name }}
           restore-keys: |
-            ${{ runner.os }}-${{ matrix.base_image }}-buildx-
+            ${{ runner.os }}-buildx-${{ env.cache_name }}-
       - name: Generate Dockerfile
         run: printf 'FROM %s\nADD install.sh /\nRUN ./install.sh\n' ${{ matrix.base_image }} > Dockerfile
       - name: Run Buildx
         uses: docker/build-push-action@v3
         with:
-          cache-from: type=local,src=/tmp/.buildx-cache-${{ matrix.base_image }}
-          cache-to: type=local,dest=/tmp/.buildx-cache-${{ matrix.base_image }}-new,mode=max
+          cache-from: type=local,src=/tmp/.buildx-cache-${{ env.cache_name }}
+          cache-to: type=local,dest=/tmp/.buildx-cache-${{ env.cache_name }}-new,mode=max
           context: .
           push: false
       - name: Move cache
         run: |
-          rm -fr /tmp/.buildx-cache-${{ matrix.base_image }}
-          mv /tmp/.buildx-cache-${{ matrix.base_image }}-new /tmp/.buildx-cache-${{ matrix.base_image }}
+          rm -fr /tmp/.buildx-cache-${{ env.cache_name }}
+          mv /tmp/.buildx-cache-${{ env.cache_name }}-new /tmp/.buildx-cache-${{ env.cache_name }}
     strategy:
       fail-fast: false
       matrix:
