:green_heart: Set 'load' of `docker/build-push-action` to true
Signed-off-by: kei-g <km.8k6ce+github@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
           cache-from: type=local,src=/tmp/.buildx-cache-${{ env.cache_name }}
           cache-to: type=local,dest=/tmp/.buildx-cache-${{ env.cache_name }}-new,mode=max
           context: .
+          load: true
           push: false
       - name: Move cache
         run: |
