:whale: Use Dockerfile instead of install.sh
Signed-off-by: kei-g <km.8k6ce+github@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,8 +21,8 @@ jobs:
           path: /tmp/.buildx-cache-${{ env.cache_name }}
           restore-keys: |
             ${{ runner.os }}-buildx-${{ env.cache_name }}-
-      - name: Generate Dockerfile
-        run: printf 'FROM %s\nADD install.sh /\nRUN ./install.sh\n' ${{ matrix.base_image }} > Dockerfile
+      - name: Copy Dockerfile
+        run: cp docker/linux/${{ env.cache_name }}/Dockerfile ./
       - name: Run Buildx
         uses: docker/build-push-action@v3
         with:
