--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,8 @@
 env:
   IMAGE_NAME: apt-fast
 jobs:
-  docker:
-    if: github.ref_type == 'tag'
-    name: Publish the image to DockerHub
+  debian:
+    name: debian:${{ matrix.dist }}
     needs:
       - ubuntu
     runs-on: ubuntu-latest
@@ -13,6 +12,7 @@ jobs:
         with:
           fetch-depth: 1
       - id: meta
+        name: Docker metadata
         uses: docker/metadata-action@v4
         with:
           images: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}
@@ -22,54 +22,6 @@ jobs:
             type=semver,pattern={{version}}
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Cache Docker layers
-        uses: actions/cache@v3
-        with:
-          key: ${{ runner.os }}-bullseye-buildx-${{ github.sha }}
-          path: /tmp/.buildx-cache-bullseye
-          restore-keys: |
-            ${{ runner.os }}-bullseye-buildx-
-      - name: Copy Dockerfile
-        run: cp docker/linux/bullseye/Dockerfile ./
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-      - name: Run Buildx and Push it to DockerHub
-        uses: docker/build-push-action@v3
-        with:
-          cache-from: type=local,src=/tmp/.buildx-cache-bullseye
-          cache-to: type=local,dest=/tmp/.buildx-cache-bullseye-new,mode=max
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-      - name: Move cache
-        run: |
-          rm -fr /tmp/.buildx-cache-bullseye
-          mv /tmp/.buildx-cache-bullseye-new /tmp/.buildx-cache-bullseye
-      - name: Patch the description
-        run: |
-          DOCKERHUB_PASSWORD="${{ secrets.DOCKERHUB_PASSWORD }}" \
-          DOCKERHUB_USERNAME="${{ secrets.DOCKERHUB_USERNAME }}" \
-          tools/patch-dockerhub.sh ${{ env.IMAGE_NAME }} "Debian/Ubuntu with apt-fast installed."
-  ubuntu:
-    name: Publish the ${{ matrix.dist }} image to DockerHub
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 1
-      - name: Setup Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Cache Docker layers
-        uses: actions/cache@v3
-        with:
-          key: ${{ runner.os }}-${{ matrix.dist }}-buildx-${{ github.sha }}
-          path: /tmp/.buildx-cache-${{ matrix.dist }}
-          restore-keys: |
-            ${{ runner.os }}-${{ matrix.dist }}-buildx-
       - name: Copy Dockerfile
         run: cp docker/linux/${{ matrix.dist }}/Dockerfile ./
       - name: Login to DockerHub
@@ -80,22 +32,50 @@ jobs:
       - name: Run Buildx and Push it to DockerHub
         uses: docker/build-push-action@v3
         with:
-          cache-from: type=local,src=/tmp/.buildx-cache-${{ matrix.dist }}
-          cache-to: type=local,dest=/tmp/.buildx-cache-${{ matrix.dist }}-new,mode=max
           context: .
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ matrix.dist }}
-      - name: Move cache
+            ${{ steps.meta.outputs.tags }}
+      - name: Patch the description
         run: |
-          rm -fr /tmp/.buildx-cache-${{ matrix.dist }}
-          mv /tmp/.buildx-cache-${{ matrix.dist }}-new /tmp/.buildx-cache-${{ matrix.dist }}
+          DOCKERHUB_PASSWORD="${{ secrets.DOCKERHUB_PASSWORD }}" \
+          DOCKERHUB_USERNAME="${{ secrets.DOCKERHUB_USERNAME }}" \
+          tools/patch-dockerhub.sh ${{ env.IMAGE_NAME }} "Debian/Ubuntu with apt-fast installed."
+    strategy:
+      matrix:
+        dist:
+          - bullseye
+  ubuntu:
+    name: ubuntu:${{ matrix.dist }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Copy Dockerfile
+        run: cp docker/linux/${{ matrix.dist }}/Dockerfile ./
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+      - name: Run Buildx and Push it to DockerHub
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ matrix.dist }}
     strategy:
       matrix:
         dist:
           - focal
           - jammy
-name: Publish
+name: Main
 on:
   create:
     tags:
