--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,6 +2,7 @@ env:
   IMAGE_NAME: apt-fast
 jobs:
   debian:
+    if: ${{ inputs.OUTDATED == 'true' }}
     name: debian:${{ matrix.dist }}
     needs:
       - ubuntu
@@ -17,9 +18,7 @@ jobs:
         with:
           images: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=semver,pattern={{major}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{version}}
+            type=schedule,pattern={{date 'YYYYMMDDHHmmss'}}
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Copy Dockerfile
@@ -36,6 +35,7 @@ jobs:
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ matrix.dist }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
             ${{ steps.meta.outputs.tags }}
       - id: overview
         name: Load README
@@ -63,6 +63,7 @@ jobs:
         dist:
           - bullseye
   ubuntu:
+    if: ${{ inputs.OUTDATED == 'true' }}
     name: ubuntu:${{ matrix.dist }}
     runs-on: ubuntu-latest
     steps:
@@ -91,8 +92,16 @@ jobs:
         dist:
           - focal
           - jammy
-name: Main
+name: Publish
 on:
-  create:
-    tags:
-      - v[0-9]+(\.[0-9]+)*
+  workflow_call:
+    inputs:
+      OUTDATED:
+        description: 'Is necessary for update'
+        required: true
+        type: string
+    secrets:
+      DOCKERHUB_PASSWORD:
+        required: true
+      DOCKERHUB_USERNAME:
+        required: true
