:green_heart: Run the workflow to check updates also on push event for 'main' branch
Signed-off-by: kei-g <km.8k6ce+github@gmail.com>

--- a/.github/workflows/check-updates.yml
+++ b/.github/workflows/check-updates.yml
@@ -93,5 +93,8 @@ jobs:
       OUTDATED: ${{ needs.dockerhub.outputs.OUTDATED == 'true' || needs.github.outputs.OUTDATED == 'true' }}
 name: Check updates
 on:
+  push:
+    branches:
+      - main
   schedule:
     - cron: '55 */8 * * *'
