:green_heart: Make 'dockerhub' job runs only on 'schedule' event
Signed-off-by: kei-g <km.8k6ce+github@gmail.com>

--- a/.github/workflows/check-updates.yml
+++ b/.github/workflows/check-updates.yml
@@ -16,6 +16,7 @@ jobs:
           printf 'timestamp=%s\n' $timestamp >> $GITHUB_OUTPUT
         shell: bash
   dockerhub:
+    if: github.event_name == 'schedule'
     name: See the latest images on DockerHub
     needs:
       - apt-fast
