:green_heart: Remove an unnecessary suffix
Signed-off-by: kei-g <km.8k6ce+github@gmail.com>

--- a/.github/workflows/check-updates.yml
+++ b/.github/workflows/check-updates.yml
@@ -8,7 +8,7 @@ jobs:
       outdated-count: ${{ steps.newer.outputs.count }}
     runs-on: ubuntu-latest
     steps:
-      - name: Download bullseye.txt
+      - name: Download bullseye
         uses: actions/download-artifact@v3
         with:
           name: bullseye
