:whale: Install `tzdata` also
Signed-off-by: kei-g <km.8k6ce+github@gmail.com>

--- a/docker/linux/bullseye/Dockerfile
+++ b/docker/linux/bullseye/Dockerfile
@@ -7,6 +7,7 @@ RUN DEBIAN_FRONTEND=noninteractive \
     aria2 \
     ca-certificates \
     sudo \
+    tzdata \
   && apt-get clean \
   && rm -fr /var/lib/apt/lists/* \
   && repo=https://raw.githubusercontent.com/ilikenwf/apt-fast/master \
