:green_heart: Change the name to use ubuntu:jammy from ubuntu:latest to ubuntu:jammy
Signed-off-by: kei-g <km.8k6ce+github@gmail.com>

--- a/.github/workflows/check-updates.yml
+++ b/.github/workflows/check-updates.yml
@@ -98,7 +98,7 @@ jobs:
             tag: 18.04
           - dist: ubuntu
             name: jammy
-            tag: latest
+            tag: jammy
           - dist: ubuntu
             name: lunar
             tag: lunar
